--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ nav a {
     padding: 0 10px;
     font-weight: bold;
     color: #004081;
+    transition: 0.5s;
 }
 
 nav a:hover {
@@ -56,23 +57,25 @@ nav a:hover {
     grid-template-rows: 3;
     align-items: center;
     margin-bottom: 20vh;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 .modal {
-    width: 100%;
-    height: 100%;
+    background: rgba(0, 0, 0, 0.1);
     position: absolute;
     top: 0;
-    background-color: rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 100%;
 }
 
 .container h1 {
     width: 80%;
-    margin: 80px auto;
+    margin: 100px auto;
     text-align: center;
     color: white;
     text-transform: uppercase;
     font-size: 3.5rem;
+    margin-bottom: -20px;
 }
 
 .container span {
@@ -83,20 +86,21 @@ nav a:hover {
     color: white;
     font-weight: bold;
     font-size: 1rem;
-    margin-bottom: 5vh;
+    margin-bottom: -10px;
 }
 
 .container button {
     width: 20%;
-    height: 30%;    
+    height: 20%;    
     margin: auto;
-    text-transform: uppercase;
     color: white;
+    text-transform: uppercase;
     background-color: #004081;
     font-weight: bold;
     font-size: 1.5rem;
     letter-spacing: 2px;
     margin-bottom: 20vh;
+    cursor: pointer;
 }
 
 .colums {
@@ -128,4 +132,121 @@ nav a:hover {
     font-size: 0.9rem;
     color: rgba(0, 0, 0, 0.7);
     line-height: 1.6;
+}
+
+.window {
+    width: 100%;
+    height: 30vh;
+    background-image: url("https://portal.unigranrio.edu.br/hubfs/Portal_Prancheta%201.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.link {
+    position: absolute;
+    transform: translate(200%, 200%);
+}
+
+.window a {
+    display: inline-block;
+    text-transform: uppercase;
+    cursor: pointer;
+    color: white;
+    font-weight: bold;
+    font-size: 2rem;
+    letter-spacing: 3px;
+}
+
+.formulario {
+    background-color: #004081;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 20px;
+    padding: 24px;
+    color: white;
+}
+
+.information {
+    width: 80%;
+    margin: 36px auto;
+}
+
+.information span {
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.information p {
+    margin-top: 15px;
+    width: 70%;
+    font-weight: 400;
+}
+
+.form {
+    margin-top: 36px;
+}
+
+.first {
+    margin-bottom: 8px;
+}
+
+.first p {
+    margin-bottom: 8px;
+}
+
+.first input {
+    width: 80%;
+    padding: 8px;
+    border: 4px solid white;
+    border-radius: 4px;
+    margin-bottom: 4px;
+}
+
+.courses p {
+    margin-bottom: 8px;
+}
+
+ul {
+    list-style: none;
+    margin-bottom: 8px;
+}
+
+li {
+    margin-bottom: 8px;
+}
+
+.courses button {
+    padding: 8px 36px;
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    border: 2px solid white;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    cursor: pointer;
+}
+
+.courses button:hover {
+    background-color: black;
+    transition: 1s;
+}
+
+footer {
+    height: 25vh;
+    background-color: #CECECE;
+    color: #06427F;
+}
+
+.end {
+    text-align: center;
+    transform: translateY(50px);
+}
+
+.end a {
+    cursor: pointer;
+}
+
+.end a:hover {
+    color: black;
 }
